<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mi Manga Nu</string>
    <string name="title_activity_server_listade_mangas">List of Manga</string>
    <string name="title_activity_activity_detalles">Details</string>
    <string name="title_activity_activity_capitulos">Chapters</string>
    <string name="title_activity_activity_lector">Reader</string>
    <string name="title_activity_server_visual_navegacion">Mangas in</string>
    <string name="title_activity_activity_resultado_de_busqueda">Search result</string>
    <string name="action_ajustar_a">Fit to</string>
    <string name="cargando">Loading&#8230;</string>
    <string name="capitulos">Chapters</string>
    <string name="info">Details</string>
    <string name="descargas">Downloads</string>
    <string name="datosde">Details</string>
    <string name="agregando">Adding to database</string>
    <string name="agregado">Manga added</string>
    <string name="iniciando">Loading number of pages</string>
    <string name="agregadodescarga">Manga added to downloads</string>
    <string name="mismangas">My Mangas</string>
    <string name="masmangas">Add Mangas</string>
    <string name="buscandonuevo">Searching for updates </string>
    <string name="busquedanores">The search returned no results</string>
    <string name="listaen">List of Mangas from</string>
    <string name="buscarupdates">Search for updates</string>
    <string name="nobuscarupdate">Don\'t search for updates</string>
    <string name="licencia">Licence</string>
    <string name="esconder">Hide from gallery</string>
    <string name="descargarestantes">Download remaining</string>
    <string name="borrado_imagenes">Images deleted</string>
    <string name="agregar">Add</string>
    <string name="borrar">Delete</string>
    <string name="borrarcap">Delete chapter</string>
    <string name="resetcap">Reset chapter</string>
    <string name="buscarnuevos">Search for updates</string>
    <string name="mas">More</string>
    <string name="escondergaleria">Hide from gallery</string>
    <string name="filtrar">Filter</string>
    <string name="vercomolista">View as List</string>
    <string name="esconder_leido">Hide already read</string>
    <string name="macartodoleido">Mark all as read</string>
    <string name="macartodonoleido">Mark all as unread</string>
    <string name="sentido">Direction</string>
    <string name="finalizado">Status: Finished.</string>
    <string name="en_progreso">Status: Ongoing.</string>
    <string name="encola">(Queued)</string>
    <string name="descargando">(Downloading)</string>
    <string name="descargado">(Downloaded)</string>
    <string name="error">(Error)</string>
    <string name="orden">Order.</string>
    <string name="apachelic">Apache Licence</string>
    <string name="mitlic">MIT Licence and Thanks</string>
    <string name="descarga_no_leidos">Download unread</string>
    <string name="demaciados_errores">Too many errors (Download suspended) \n This may be caused: \n *  Error connecting \n *  Error on the server side \n *  A bad upload, etc. \nTry later</string>
    <string name="mit">The MIT License (MIT)
        Copyright &#169; 2014 rulosoft (Raul Haag)
        Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

Thanks to sephiroth74 for the library ImageViewTouch, castorflex for VeticalViewPager and  thest1 for LazyList.

Este programa solo automatiza funciones que se podrian hacer con un navegador de internet el creador no se resposabiliza por su mal uso.
</string>
    <string name="title_activity_preference">Preferencies</string>
    <string name="action_settings">Settings</string>
    <string name="esconder_de_galeria_subtitle">Hide downloaded images from gallery</string>
    <string name="configuraciones">Settings</string>
    <string name="opciones_mm">My Mangas settings</string>
    <string name="opciones_caps">Chapters settings</string>
    <string name="orden_de_capitulos">Chapters order</string>
    <string name="orden_de_capitulos_subtitle">Ascending, descending</string>
    <string name="orden_asc">Ascending</string>
    <string name="orden_dsc">Descending</string>
    <string name="opciones_lec">Reader settings</string>
    <string name="sentido_lectura">Read direction</string>
    <string name="sentido_lectura_subtitle">By default</string>
    <string name="r2l">Right to Left</string>
    <string name="l2r">Left to Right</string>
    <string name="vertical">Vertical</string>
    <string name="ajuste_imagen">Image fit by default</string>
    <string name="ajuste_imagen_subtitle">(Original, height, width, or best fit)</string>
    <string name="no_scale">Original size</string>
    <string name="mejor_ajuste">Best fit</string>
    <string name="ajuste_ancho">Fit to width</string>
    <string name="ajuste_alto">Fit to height</string>
    <string name="max_texture_title">Maximum texture size supported by the device accelerator</string>
    <string name="max_texture_subtitle">0 to disable hardware acceleration</string>
    <string name="opciones_descarga">Download settings</string>
    <string name="cantidad_descargas_title">Download slot</string>
    <string name="cantidad_descargas_subtitle">Number of download threads (2 as default)</string>
    <string name="cantidad_errores_title">Maximum number of errors</string>
    <string name="cantidad_errores_subtitle">Before stopping a chapter download</string>
    <string name="cantidad_reintentos_title">Number of retries</string>
    <string name="cantidad_reintentos_subtitle">By image</string>
    <string name="borrar_imagenes">Delete images to free space</string>
    <string name="seleccionar_todo">Select all</string>
    <string name="quitar_seleccion">Select none</string>
    <string name="quitar_descarga">Can\'t remove active download</string>
    <string name="marcarleido">Mark selected as read</string>

</resources>
