<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ar.rulosoft.mimanganu.ActivityCapitulos" >

    <item
        android:id="@+id/action_sentido"
        android:icon="@drawable/ic_action_clasico"
        android:orderInCategory="100"
        android:title="@string/sentido"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_buscarnuevos"
        android:icon="@drawable/ic_action_av_reload"
        android:orderInCategory="100"
        android:title="@string/buscarnuevos"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_action_core_overflow"
        android:orderInCategory="100"
        android:title="@string/mas"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_descargar_restantes"
                android:title="@string/descargarestantes"/>
            <item
                android:id="@+id/action_marcar_todo_no_leido"
                android:title="@string/macartodonoleido"/>
            <item
                android:id="@+id/action_marcar_todo_leido"
                android:title="@string/macartodoleido"/>
        </menu>
    </item>

</menu>